packages/libs/error-stack/tests/snapshots/test_serialize__attachment.snap
---
source: tests/test_serialize.rs
expression: report
---
[
  {
    "value": "root error",
    "attachments": [
      "printable A",
    ],
    "sources": [],
  },
]
