packages/libs/error-stack/tests/snapshots/test_serialize__context.snap
---
source: tests/test_serialize.rs
expression: report
---
[
  {
    "frames": [
      {
        "type": "context",
        "value": "context A",
      },
      {
        "type": "attachment",
        "value": "printable A",
      },
      {
        "type": "context",
        "value": "root error",
      },
    ],
    "sources": [],
  },
]
