packages/libs/error-stack/tests/snapshots/test_serialize__multiple_sources.snap
---
source: tests/test_serialize.rs
expression: a
---
[
  {
    "type": "attachment",
    "value": "printable C: 4",
    "sources": [
      {
        "type": "attachment",
        "value": None,
        "sources": [
          {
            "type": "context",
            "value": "context A",
            "sources": [
              {
                "type": "attachment",
                "value": "printable C: 3",
                "sources": [
                  {
                    "type": "attachment",
                    "value": "printable C: 1",
                    "sources": [
                      {
                        "type": "attachment",
                        "value": None,
                        "sources": [
                          {
                            "type": "context",
                            "value": "root error",
                            "sources": [],
                          },
                        ],
                      },
                    ],
                  },
                  {
                    "type": "attachment",
                    "value": "printable C: 2",
                    "sources": [
                      {
                        "type": "attachment",
                        "value": None,
                        "sources": [
                          {
                            "type": "context",
                            "value": "root error",
                            "sources": [],
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
]
