packages/libs/error-stack/tests/snapshots/test_serialize__multiple_sources_at_root.snap
---
source: tests/test_serialize.rs
expression: a
---
[
  {
    "frames": [
      {
        "type": "attachment",
        "value": "printable C: 1",
      },
      {
        "type": "context",
        "value": "root error",
      },
    ],
    "sources": [],
  },
  {
    "frames": [
      {
        "type": "attachment",
        "value": "printable C: 2",
      },
      {
        "type": "context",
        "value": "root error",
      },
    ],
    "sources": [],
  },
]
